# cch-2024

./: Cargo.toml  Shuttle.toml
.github/workflows/: clippy-pr.yaml  push.yaml
migrations/: 001_init.sql  002_page_token.sql  003_drop_page_token.sql
resources/: santa.pem
src/: main.rs
src/modules/: day_five.rs  day_negative_one.rs  day_nine.rs  day_nineteen.rs  day_sixteen.rs  day_twelve.rs  day_twenty_three.rs  day_two.rs  mod.rs
src/utils/: cargo_manifest.rs  connect_four.rs  error_handling.rs  error_responses.rs  mod.rs  network_address.rs  quote.rs  rate_limit.rs
