[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
cargo-manifest = "0.17.0"
itertools = "0.13.0"
jsonwebtoken = "9.3.0"
leaky-bucket = "1.1.2"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serde_with = "3.11.0"
serde_yaml = "0.9.34"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
shuttle-persist = "0.49.0"
sqlx = { version = "0.8.2", features = ["postgres", "uuid", "chrono"] }
tokio = "1.42.0"
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
indoc = "2.0.5"
html-escape = "0.2.13"
cargo-lock = "10.0.1"
